--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.16",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   }
